# IDA-RPC

./: CMakeLists.txt  readme.md
lib/discord_game_sdk/cpp/: types.h
src/: ida_helper.cpp  ida_helper.hpp  plugin.cpp  plugin_mod.cpp  plugin_mod.hpp
src/discord/: rich_presence.cpp  rich_presence.hpp  rich_presence_helper.cpp  rich_presence_helper.hpp
src/listener/: view_listener.cpp  view_listener.hpp
src/log/: log.cpp
